Updated data models

--- a/Scrap.xcodeproj/xcshareddata/xcschemes/TDD-Swift.xcscheme
+++ b/Scrap.xcodeproj/xcshareddata/xcschemes/TDD-Swift.xcscheme
@@ -49,6 +49,11 @@
                BlueprintName = "LiveTests"
                ReferencedContainer = "container:Scrap.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "LiveTests">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
    </TestAction>
