--- a/Scrap.xcodeproj/xcshareddata/xcschemes/TDD-Swift.xcscheme
+++ b/Scrap.xcodeproj/xcshareddata/xcschemes/TDD-Swift.xcscheme
@@ -55,6 +55,16 @@
                </Test>
             </SkippedTests>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "3134C32424D3457100041F98"
+               BuildableName = "EnvironmentTests.xctest"
+               BlueprintName = "EnvironmentTests"
+               ReferencedContainer = "container:Scrap.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
